--- a/index.html
+++ b/index.html
@@ -127,9 +127,23 @@
 </div>
 
       </main>
-    <footer>
+
         <!-- aca el contenido del pie de página -->
-      </footer>
+        <footer class="bg-secondary text-white py-3">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6">
+                <a href="#" class="mb-0">Términos y Condiciones │ Contáctanos</p>
+              </div>
+              <div class="col-md-6 text-md-right">
+                <a href="#" class="text-white mr-3"><i class="fab fa-facebook fa-lg"></i></a>
+                <a href="#" class="text-white mr-3"><i class="fab fa-instagram fa-lg"></i></a>
+              </div>
+            </div>
+            <hr class="mt-3 mb-0">
+            <p class="text-center mb-0 mt-3">©2023 Todos los derechos reservados - Gym</p>
+          </div>
+        </footer>
     
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
 
