--- a/index.html
+++ b/index.html
@@ -129,19 +129,21 @@
       </main>
 
         <!-- aca el contenido del pie de página -->
-        <footer class="bg-secondary text-white py-3">
+        <footer class="bg-dark pb-sm-4 pb-2">
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
-                <a href="#" class="mb-0">Términos y Condiciones │ Contáctanos</p>
+              <div class="col-md-6 text-center text-md-left">
+                <a href="#" class="mb-0">Términos y Condiciones │ Contáctanos</a>
               </div>
               <div class="col-md-6 text-md-right">
                 <a href="#" class="text-white mr-3"><i class="fab fa-facebook fa-lg"></i></a>
                 <a href="#" class="text-white mr-3"><i class="fab fa-instagram fa-lg"></i></a>
               </div>
             </div>
-            <hr class="mt-3 mb-0">
-            <p class="text-center mb-0 mt-3">©2023 Todos los derechos reservados - Gym</p>
+            <hr class="my-3 border-light">
+            <p class="text-center mb-0 mt-3">
+              <a href="#" class="mb-0">©2023 Todos los derechos reservados - Gym</a>
+            </p>
           </div>
         </footer>
     
