--- a/index.html
+++ b/index.html
@@ -125,6 +125,45 @@
       </div>
   </div>
 </div>
+<!-- aca banner con imágenes y botón -->
+
+<div class="container-fluid bg-dark">
+  <div class="row">
+    <div class="col-md-3 pt-5 pb-5 pl-5 pr-0">
+      <p class="text-danger mb-0" style="font-size: 1.2rem;">PERSONAL</p>
+      <h3 class="text-white mb-3">Nuestros Profesionales</h3>
+    </div>
+    <div class="col-md-9 pt-5 pb-5 pl-0 pr-5 text-center">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="/images/profesor1.jpg" alt="Círculo 1" class="img-fluid rounded-circle mb-3">
+        </div>
+        <div class="col-md-4">
+          <img src="/images/profesor2.png" alt="Círculo 2" class="img-fluid rounded-circle mb-3">
+        </div>
+        <div class="col-md-4">
+          <img src="/images/profesor3.jpg" alt="Círculo 3" class="img-fluid rounded-circle mb-3">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-danger p-2 d-flex align-items-center justify-content-center">
+  <div class="row">
+    <div class="col-md-7 col-sm-12 text-center">
+      <p class="text-white font-size-xxl mb-4">Alcanza tu potencial</p>
+    </div>
+    <div class="col-md-5 col-sm-12 text-center">
+      <a href="#" class="btn btn-outline-light btn-lg">Inscribite</a>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
       </main>
 
