--- a/index.html
+++ b/index.html
@@ -136,18 +136,27 @@
     <div class="col-md-9 pt-5 pb-5 pl-0 pr-5 text-center">
       <div class="row">
         <div class="col-md-4">
-          <img src="/images/profesor1.jpg" alt="Círculo 1" class="img-fluid rounded-circle mb-3">
+          <img src="" alt="Círculo 1" class="img-fluid rounded-circle mb-3" id="director1-img">
+          <h5 class="text-white" id="director1-name"></h5>
+          <p class="text-white" id="director1-email"></p>
         </div>
         <div class="col-md-4">
-          <img src="/images/profesor2.png" alt="Círculo 2" class="img-fluid rounded-circle mb-3">
+          <img src="" alt="Círculo 2" class="img-fluid rounded-circle mb-3" id="director2-img">
+          <h5 class="text-white" id="director2-name"></h5>
+          <p class="text-white" id="director2-email"></p>
         </div>
         <div class="col-md-4">
-          <img src="/images/profesor3.jpg" alt="Círculo 3" class="img-fluid rounded-circle mb-3">
+          <img src="" alt="Círculo 3" class="img-fluid rounded-circle mb-3" id="director3-img">
+          <h5 class="text-white" id="director3-name"></h5>
+          <p class="text-white" id="director3-email"></p>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
 
 <div class="container-fluid bg-danger p-2 d-flex align-items-center justify-content-center">
   <div class="row">
