se agregan algunas funcionalidades al formulario

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="./css/estilo.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.1/css/all.css">
 
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 
     <title>Gym</title>
 </head>
